Initial Ecan refactoring, modifcation and new Agents.
Includes new ImportanceUpdating agent with direct stimulation functionality
and Diffusion agent, bot split in to two agents one working inside AF and
another over the whole atomspace.

--- a/opencog/attention/CMakeLists.txt
+++ b/opencog/attention/CMakeLists.txt
@@ -29,6 +29,8 @@ TARGET_LINK_LIBRARIES(attention-types
 
 ADD_SUBDIRECTORY (scm)
 
+ADD_SUBDIRECTORY (experimental)
+
 # AttentionModule
 ADD_LIBRARY(attention SHARED
 	AttentionModule
