Moved more Code into RentCollectionBaseAgent Fixed the Author for the files WhiteSpace Fixes

--- a/opencog/attention/experimental/CMakeLists.txt
+++ b/opencog/attention/experimental/CMakeLists.txt
@@ -1,10 +1,10 @@
 # ExperimentalAttentionModule
 ADD_LIBRARY(attention-experimental SHARED
-            ExperimentalAttentionModule	
+            ExperimentalAttentionModule
             ImportanceDiffusionBase
             AFImportanceDiffusionAgent
             WAImportanceDiffusionAgent
-            RentCollectionBase
+            RentCollectionBaseAgent
             AFRentCollectionAgent
             WARentCollectionAgent
 )
