Fixed Linking Issue & Added Misssing Config

--- a/opencog/attention/experimental/CMakeLists.txt
+++ b/opencog/attention/experimental/CMakeLists.txt
@@ -11,4 +11,4 @@ ADD_LIBRARY(attention-experimental SHARED
 
 ADD_DEPENDENCIES(attention-experimental attention-types)
 
-TARGET_LINK_LIBRARIES(attention-experimental server ${ATOMSPACE_LIBRARIES})
+TARGET_LINK_LIBRARIES(attention-experimental attention server ${ATOMSPACE_LIBRARIES})
