Inital Merge of Experimental ECAN

--- a/opencog/attention/experimental/CMakeLists.txt
+++ b/opencog/attention/experimental/CMakeLists.txt
@@ -7,6 +7,12 @@ ADD_LIBRARY(attention-experimental SHARED
             RentCollectionBaseAgent
             AFRentCollectionAgent
             WARentCollectionAgent
+
+            ForgettingAgent
+            MinMaxSTIUpdatingAgent
+            FocusBoundaryUpdatingAgent
+            HebbianCreationAgent
+            HebbianUpdatingAgent
 )
 
 ADD_DEPENDENCIES(attention-experimental attention-types)
