Stop using the atomspace versions of the libraries.

--- a/tests/attentionbank/CMakeLists.txt
+++ b/tests/attentionbank/CMakeLists.txt
@@ -1,7 +1,7 @@
 LINK_LIBRARIES(
-	attentionvalue
-	attentionbank
-	atomspace
+	attentionval
+	attentionbonk
+	${ATOMSPACE_LIBRARIES}
 )
 
 ADD_CXXTEST(AttentionValueUTest)
