--- a/opencog/attention/CMakeLists.txt
+++ b/opencog/attention/CMakeLists.txt
@@ -25,8 +25,7 @@ ADD_LIBRARY(attention SHARED
 
 TARGET_LINK_LIBRARIES(attention
 	attention-types
-	neighbors
-	server
+	${COGSERVER_LIBRARIES}
 	${ATOMSPACE_LIBRARIES})
 
 INSTALL (TARGETS attention
