--- a/opencog/attentionbank/bank/CMakeLists.txt
+++ b/opencog/attentionbank/bank/CMakeLists.txt
@@ -26,7 +26,8 @@ IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
     ADD_DEFINITIONS(-DECAN_EXPERIMENT)
 ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
 
-INSTALL (TARGETS attentionbonk EXPORT AtomSpaceTargets
+INSTALL (TARGETS attentionbonk
+	EXPORT AttentionBankTargets
 	DESTINATION "lib${LIB_DIR_SUFFIX}/opencog"
 )
 
