Move the examples over from the opencog repo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -414,6 +414,7 @@ ENDIF(HAVE_COGSERVER AND HAVE_ATOMSPACE AND HAVE_COGUTIL)
 
 ADD_SUBDIRECTORY(lib)
 ADD_SUBDIRECTORY(opencog)
+ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
 
 IF (CXXTEST_FOUND)
 	ADD_CUSTOM_TARGET(tests)
