Attention won't build without cmake 3.13

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,9 @@
 # -- print pretty summary
 #
 
-# cogutils already requires 2.8.12.2, so may as well ask for that.
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)
-IF (COMMAND CMAKE_POLICY)
-	CMAKE_POLICY(SET CMP0003 NEW)
-ENDIF (COMMAND CMAKE_POLICY)
-
-IF(CMAKE_VERSION VERSION_GREATER 3.0.2)
-	CMAKE_POLICY(SET CMP0037 OLD)
-ENDIF(CMAKE_VERSION VERSION_GREATER 3.0.2)
+# We need at least version 3.13 to get TARGET_LINK_DIRECTORIES
+MESSAGE("Found CMake version ${CMAKE_VERSION}")
+CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
 
 PROJECT(opencog)
 
