--- a/opencog/attention/CMakeLists.txt
+++ b/opencog/attention/CMakeLists.txt
@@ -24,14 +24,13 @@ ADD_LIBRARY(attention SHARED
 	#scm/StimulationAgent
 )
 
-TARGET_LINK_DIRECTORIES(attention
-	PUBLIC ${CMAKE_INSTALL_PREFIX}/lib${LIB_DIR_SUFFIX}/opencog/modules
-)
+# TARGET_LINK_DIRECTORIES(attention
+#	PUBLIC ${CMAKE_INSTALL_PREFIX}/lib${LIB_DIR_SUFFIX}/opencog/modules
+#)
 
 TARGET_LINK_LIBRARIES(attention
 	attention-types
 	attentionbonk
-	agents
 	${COGSERVER_LIBRARIES}
 	${ATOMSPACE_LIBRARIES})
 
