--- a/opencog/attention/CMakeLists.txt
+++ b/opencog/attention/CMakeLists.txt
@@ -30,7 +30,7 @@ ADD_LIBRARY(attention SHARED
 
 TARGET_LINK_LIBRARIES(attention
 	attention-types
-	attentionbonk
+	attentionbank
 	${COGSERVER_LIBRARIES}
 	${ATOMSPACE_LIBRARIES})
 
