Fix broken module name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ IF (NOT CMAKE_VERSION VERSION_GREATER 3.13)
 	CMAKE_POLICY(SET CMP0037 OLD)
 ENDIF (NOT CMAKE_VERSION VERSION_GREATER 3.13)
 
-PROJECT(opencog)
+PROJECT(attention)
 
 # ----------------------------------------------------------
 # User-modifiable options. Feel free to change these!
