--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.0
 
 jobs:
-  attention
+  attention:
     docker:
-      - image: opencog/opencog-deps
+      - image: $CIRCLE_PROJECT_USERNAME/opencog-deps
         user: root
         environment:
           CCACHE_DIR: /ws/ccache
@@ -68,6 +68,61 @@ jobs:
           name: Run tests
           command: cd build && make -j2 test ARGS=-j2
       - run:
+          name: Install Attention
+          command: cd build && make -j2 install && ldconfig
+      - run:
+          name: Print test log
+          command: cat build/tests/Testing/Temporary/LastTest.log
+          when: always
+      - persist_to_workspace:
+          root: /ws/
+          paths:
+            - attention
+            - ccache
+
+  opencog:
+    docker:
+      - image: $CIRCLE_PROJECT_USERNAME/opencog-deps
+        user: root
+        environment:
+          CCACHE_DIR: /ws/ccache
+    working_directory: /ws/opencog
+    steps:
+      - attach_workspace:
+          at: /ws/
+      - restore_cache:
+          name: Restore GCH Cache
+          keys:
+            - ghc-{{checksum "/ws/atomspace/opencog/haskell/stack.yaml"}}-{{ arch }}
+      - restore_cache:
+          name: Restore Haskell Deps Cache
+          keys:
+            - haskelldeps-{{checksum "/ws/atomspace/opencog/haskell/stack.yaml"}}-{{checksum "/ws/atomspace/opencog/haskell/opencog-atomspace.cabal"}}-{{ arch }}
+      - run:
+          name: Install cogutil
+          command: cd /ws/cogutil/build && make -j2 install && ldconfig
+      - run:
+          name: Install AtomSpace
+          command: cd /ws/atomspace/build && make -j2 install && ldconfig
+      - run:
+          name: Install Attention
+          command: cd /ws/attention/build && make -j2 install && ldconfig
+      - run:
+          name: Checkout OpenCog
+          command: git clone --depth 1 https://github.com/$CIRCLE_PROJECT_USERNAME/opencog .
+      - run:
+          name: CMake Configure
+          command: mkdir build && cd build && cmake ..
+      - run:
+          name: Build
+          command: cd build && make -j2
+      - run:
+          name: Build tests
+          command: cd build && make -j2 tests
+      - run:
+          name: Run tests
+          command: cd build && make -j2 test ARGS=-j2
+      - run:
           name: Install OpenCog
           command: cd build && make -j2 install && ldconfig
       - run:
@@ -82,9 +137,9 @@ jobs:
 
   package: #Place holder
     docker:
-      - image: opencog/opencog-deps
+      - image: $CIRCLE_PROJECT_USERNAME/opencog-deps
         user: root
-    working_directory: /ws/opencog
+    working_directory: /ws/attention
     steps:
       - attach_workspace:
           at: /ws/
@@ -96,14 +151,18 @@ jobs:
           paths:
             - /ws/ccache
 
+
 workflows:
   version: 2
   build-test-package:
     jobs:
       - attention
-      - package:
+      - opencog:
           requires:
             - attention
+      - package:
+          requires:
+            - opencog
           filters:
             branches:
               only: master
