--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ IF (CXXTEST_FOUND)
 
 	IF (HAVE_ATOMSPACE)
 		ADD_SUBDIRECTORY (attentionbank)
-		ADD_SUBDIRECTORY (attention)
+		# ADD_SUBDIRECTORY (attention)
 	ENDIF (HAVE_ATOMSPACE)
 
 ENDIF (CXXTEST_FOUND)
