--- a/opencog/attentionbank/cython/opencog/CMakeLists.txt
+++ b/opencog/attentionbank/cython/opencog/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing")
 
 INCLUDE_DIRECTORIES(
 	${ATOMSPACE_INCLUDE_DIR}
-	${PYTHON_INCLUDE_DIRS}
+	${Python3_INCLUDE_DIRS}
 	${CMAKE_CURRENT_SOURCE_DIR}
 	${CMAKE_CURRENT_BINARY_DIR}
 )
@@ -31,7 +31,7 @@ TARGET_LINK_LIBRARIES(bank_cython
 	attentionbank
 	${ATOMSPACE_LIBRARIES}
 	${COGUTIL_LIBRARY}
-	${PYTHON_LIBRARIES}
+	${Python3_LIBRARIES}
 )
 
 
