--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ jobs:
           paths:
             - cogutil
             - atomspace
+            - atomspace-storage
             - cogserver
             - attention
             - ccache
@@ -119,6 +120,9 @@ jobs:
       - run:
           name: Install AtomSpace
           command: cd /ws/atomspace/build && make -j2 install && ldconfig
+      - run:
+          name: Install AtomSpace Storage
+          command: cd /ws/atomspace-storage/build && make -j2 install && ldconfig
       - run:
           name: Install CogServer
           command: cd /ws/cogserver/build && make -j2 install && ldconfig
