Not git clone fails for a different reason...
wtf: this works on a dozen other repos. Why does it fail, here?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
       - run: git --version
       - run: apt-get update && apt-get install -y openssh-client
       - run: ssh -V
+      - run: cd /ws/attention
       - checkout
       - run:
           name: CMake Configure
