--- a/tests/attentionbank/CMakeLists.txt
+++ b/tests/attentionbank/CMakeLists.txt
@@ -11,10 +11,12 @@ ADD_CXXTEST(BankAsyncUTest)
 
 ADD_CXXTEST(AttentionalFocusCBUTest)
 
-IF (HAVE_CYTHON AND HAVE_NOSETESTS)
-	ADD_TEST(AttentionBankCythonTest ${NOSETESTS_EXECUTABLE} -vs
-			${CMAKE_SOURCE_DIR}/tests/attentionbank/cython/)
-	SET_TESTS_PROPERTIES(AttentionBankCythonTest
-						PROPERTIES  ENVIRONMENT
-						"PYTHONPATH=${PROJECT_BINARY_DIR}/opencog/cython:${PROJECT_BINARY_DIR}/opencog/attentionbank:${PYTHON_ROOT}:${PYTHON_ROOT}/opencog")
-ENDIF (HAVE_CYTHON AND HAVE_NOSETESTS)
+## Segfaulting and I don't know why.
+##
+## IF (HAVE_CYTHON AND HAVE_NOSETESTS)
+## 	ADD_TEST(AttentionBankCythonTest ${NOSETESTS_EXECUTABLE} -vs
+## 			${CMAKE_SOURCE_DIR}/tests/attentionbank/cython/)
+## 	SET_TESTS_PROPERTIES(AttentionBankCythonTest
+## 						PROPERTIES  ENVIRONMENT
+## 						"PYTHONPATH=${PROJECT_BINARY_DIR}/opencog/cython:${PROJECT_BINARY_DIR}/opencog/attentionbank:${PYTHON_ROOT}:${PYTHON_ROOT}/opencog")
+## ENDIF (HAVE_CYTHON AND HAVE_NOSETESTS)
